add arima model

--- a/FRED New Homes Trend.ipynb
+++ b/FRED New Homes Trend.ipynb
@@ -69,15 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newHmSales = getFREDSeriesData(seriesId, apiKey) #get FRED new home sales\n",
+    "newHmSalesMaster = getFREDSeriesData(seriesId, apiKey) #get FRED new home sales\n",
     "\n",
-    "newHmSales = cleanFREDSeriesData(newHmSales) #cleanup FRED new home sales\n",
+    "newHmSalesMaster = cleanFREDSeriesData(newHmSalesMaster) #cleanup FRED new home sales\n",
     "\n",
-    "newHmSales = dateFilterDF(newHmSales, 'date', '2018-01-01', '2020-10-01') #filter date range on df"
+    "validationDataSet = dateFilterDF(newHmSales, 'date', '1999-01-01', '2010-12-01')\n",
+    "\n",
+    "trainingDataSet = dateFilterDF(newHmSales, 'date', '2011-01-01', '2015-12-01')"
    ]
   },
   {
